--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,12 @@ cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7"
 defmt = "0.3"
 defmt-rtt = "0.4"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
-nrf52840-hal = "0.16"
+embedded-hal = "1.0"
 fugit = { version = "0.3.7", features = ["defmt"] }
+nrf52840-hal = "0.18"
 rtic = { version = "2.1", features = ["thumbv7-backend"] }
 rtic-monotonics = { version = "2.0", features = ["nrf52840"] }
+panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 # cargo build/run
 [profile.dev]
