--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,26 @@ harness = false
 [dependencies]
 cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7"
+critical-section = "1.2.0"
 defmt = "0.3"
 defmt-rtt = "0.4"
 embedded-hal = "1.0"
-fugit = { version = "0.3.7", features = ["defmt"] }
+fugit = { version = "0.3", features = ["defmt"] }
+heapless = { version = "0.8", features = ["defmt-03"] }
 nrf52840-hal = "0.18"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
+rand_core = "0.6.4"
 rtic = { version = "2.1", features = ["thumbv7-backend"] }
 rtic-monotonics = { version = "2.0", features = ["nrf52840"] }
-panic-probe = { version = "0.3", features = ["print-defmt"] }
+smoltcp = { version = "0.11", default-features = false, features = [
+    "defmt",
+    "socket-udp",
+    "socket-dhcpv4",
+    "proto-ipv4",
+] }
+static_cell = "2.1"
+usb-device = { version = "0.3", features = ["defmt"] }
+usbd-ethernet = { path = "../usbd-ethernet" }
 
 # cargo build/run
 [profile.dev]
@@ -27,7 +39,7 @@ codegen-units = 1
 debug = 2
 debug-assertions = true # <-
 incremental = false
-opt-level = 'z'         # <-
+opt-level = 0
 overflow-checks = true  # <-
 
 # cargo test
